[package]
name = "on-flows-tester"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
dotenv = "0.15.0"
serde_json = "1.0.97"
tokio_wasi = { version = "1", features = ["rt", "macros", "net", "time"]}
serde={ version = "1", features = ["derive"] }
anyhow = "1.0.75"
flowsnet-platform-sdk ="0.1.3"
log = "0.4.14"
airtable-flows = "0.1.9"
schedule-flows = "0.3.0"
chrono = "0.4.31"
github-flows = "0.7.0"
octocrab_wasi = { version = "0.19.1", features = ["wasi"], default-features = false }
base64 = "0.21.5"
derivative = "2.2.0"
async-openai-wasi = "0.16.4"
openai-flows = "0.9.1"
web-scraper-flows = "0.1.0"
nalgebra = "0.32.3"
regex = "1.10.3"
llmservice-flows = "0.2.0"
vector-store-flows = "0.1.2"
itertools = "0.12.1"
store-flows = "0.3.1"
reqwest_wasi = "0.11.16"
http_req_wasi = {version =  "0.11.1", features = ["wasmedge_rustls"]}
